--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "form-data": "^4.0.2"
+    "form-data": "^4.0.2",
+    "nodemon": "^3.1.9"
   }
 }
