--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "form-data": "^4.0.2",
+    "dotenv": "^16.5.0",
+    "form-data": "^4.0.2"
+  },
+  "devDependencies": {
     "selenium-webdriver": "^4.31.0"
   }
 }
