--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "studev1922",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -14,6 +15,11 @@
     "form-data": "^4.0.2"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mime": "^4.0.7",
+    "multer": "^1.4.5-lts.2",
+    "nodemon": "^3.1.10",
     "selenium-webdriver": "^4.31.0"
   }
 }
