Update environment variables in .env and enhance module.js with WebDriver import and driver documentation

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ URL_UPLOAD='https://upload.facebook.com/ajax/react_composer/attachments/photo/up
 # project enviroment path variables
 PATH_NES_DATA='.asset/nes.json'
 PATH_COOKIES='.asset/cookie.txt'
+DAT_SCRIPT='browser-js/dat.js'
+
+# DRIVER SESSION
+USER_DATA_DIR='C:\Users\transform\Documents\dev\.fb-profile'
