--- a/package.json
+++ b/package.json
@@ -9,17 +9,11 @@
     "start": "node index.js",
     "test": "nodemon index.js"
   },
-  "dependencies": {
-    "axios": "^1.8.4",
-    "dotenv": "^16.5.0",
-    "form-data": "^4.0.2"
-  },
   "devDependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mime": "^4.0.7",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.10",
-    "selenium-webdriver": "^4.31.0"
+    "nodemon": "^3.1.10"
   }
 }
