Refactor environment variables and update file structure
- Renamed Facebook API URLs in .env for clarity.
- Updated project environment path variables in .env.
- Removed unnecessary entries from .gitignore.
- Added new RelayOperation.js and user_data.js files for handling Relay operations and user data extraction.
- Refactored index.js to integrate new Facebook model and streamline posting functionality.
- Removed deprecated post mutation logic and image upload handling.
- Updated menu options to reflect new functionality.

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # FACEBOOK UPLOAD
-URL_GRAPH='https://www.facebook.com/api/graphql'
-URL_UPLOAD='https://upload.facebook.com/ajax/react_composer/attachments/photo/upload'
+FB_GRAPHQL='https://www.facebook.com/api/graphql'
+FB_UPLOAD='https://upload.facebook.com/ajax/react_composer/attachments/photo/upload'
 
-# project enviroment path variables
-PATH_NES_DATA='.asset/nes.json'
-PATH_COOKIES='.asset/cookie.txt'
-DAT_SCRIPT='browser-js/dat.js'
 
-# DRIVER SESSION
-USER_DATA_DIR='C:\Users\transform\Documents\dev\.fb-profile'
+# Project enviroment path variables
+RELAY_OPERATION_JSON='.asset/RelayOperation.json'
+RELAY_OPERATION_SCRIPT='browser-js/RelayOperation.js'
+
+USER_DATA_JSON='.asset/user_data.json'
+USER_DATA_SCRIPT='browser-js/user_data.js'
