Refactor environment variables and update .gitignore; remove unused Facebook upload URLs and clean up package.json scripts

--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
-# FACEBOOK UPLOAD
-FB_GRAPHQL='https://www.facebook.com/api/graphql'
-FB_UPLOAD='https://upload.facebook.com/ajax/react_composer/attachments/photo/upload'
-
-
 # Project enviroment path variables
-RELAY_OPERATION_JSON='.asset/RelayOperation.json'
-RELAY_OPERATION_SCRIPT='browser-js/RelayOperation.js'
+DATA_DIRECTORY='.data'
 
+GROUP_IDS_JSON='.asset/group_ids.json'
 USER_DATA_JSON='.asset/user_data.json'
+RELAY_OPERATION_JSON='.asset/RelayOperation.json'
+
 USER_DATA_SCRIPT='browser-js/user_data.js'
+RELAY_OPERATION_SCRIPT='browser-js/RelayOperation.js'
