--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "studev1922",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -17,6 +16,7 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "inquirer": "^12.6.1",
     "mime": "^4.0.7",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
